src/client/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.App {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  height: 100vh;
}

h1 {
  margin-bottom: 1rem;
}

label {
  font-size: 1.2rem;
  font-weight: bold;
  margin-top: 1rem;
}

input,
textarea {
  width: 300px;
  padding: 0.5rem;
  font-size: 1rem;
  border: 1px solid #ccc;
  border-radius: 5px;
  text-align: center;
}

textarea {
  height: 100px;
  resize: none;
}

button {
  color: white;
}

.keyboard-container {
  margin-top: 2rem;
}

.output-container,
.input-container {
  display: flex;
  flex-direction: column;
}

.clickable {
  cursor: pointer;
}

#listContainer {
  display: flex;
  flex-direction: column;
}

